author spacing fix

--- a/news/style.scss
+++ b/news/style.scss
@@ -86,11 +86,16 @@ body {
 }
 
 .author {
+
   text-align: center;
   font-size: 13px;
   line-height: 10px;
 }
-
+.bottom-block{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
 .url {
   text-align: center;
   font-size: 14px;
